--- a/src/scss/pages/Cart/_cartConfirmRemoveModal.scss
+++ b/src/scss/pages/Cart/_cartConfirmRemoveModal.scss
@@ -1,43 +1,43 @@
-.confirm-remove-modal {
+.confirm-remove {
   display: grid;
   grid-template-columns: 1fr 2fr;
   max-width: 600px;
   column-gap: 20px;
 
-  img {
+  &__img {
     width: 100%;
     object-fit: contain;
   }
 
-  .text-content {
+  &__text {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
 
-  .btns {
+  &__btns {
     margin-top: 40px;
     display: flex;
     justify-content: space-between;
+  }
 
-    .cancel-btn {
-      font-size: 1rem;
-      background-color: gray;
-    }
+  &__cancel-btn {
+    font-size: 1rem;
+    background-color: gray;
+  }
 
-    .remove-btn {
-      font-size: 1rem;
-      background-color: #c14953;
-    }
+  &__remove-btn {
+    font-size: 1rem;
+    background-color: #c14953;
   }
 
   @media screen and (max-width: 576px) {
-    h2 {
+    &__header {
       font-size: 20px;
     }
   
-    .btn {
+    &__btns {
       font-size: 14px;
       padding: 8px 24px;
     }
@@ -46,11 +46,12 @@
   @media screen and (max-width: 480px) {
     padding: 16px;
   
-    h2 {
+    &__header {
       font-size: 18px;
     }
   
-    .btn {
+    &__cancel-btn,
+    &__remove-btn {
       font-size: 12px;
       padding: 8px 20px;
     }
