--- a/src/scss/pages/Cart/_cartEmpty.scss
+++ b/src/scss/pages/Cart/_cartEmpty.scss
@@ -1,4 +1,4 @@
-.cart__empty {
+.cart-empty {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -7,18 +7,18 @@
   padding-top: 48px;
   padding-bottom: 48px;
 
-  &--message {
+  &__message {
     margin: 48px 0 24px;
     font-size: 1.25rem;
   }
 
-  &--img {
+  &__img {
     max-width: 260px;
     width: 75%;
     object-fit: contain;
   }
 
-  &--btn {
+  &__btn {
     padding-left: 48px;
     padding-right: 48px;
   }
