--- a/src/scss/pages/Cart/_cartLayout.scss
+++ b/src/scss/pages/Cart/_cartLayout.scss
@@ -1,84 +1,52 @@
 @use '../../variables';
 
-#cart {
+.cart {
   min-height: calc(100vh - variables.$nav-height - variables.$footer-height);
-
-  .cart__section-title {
-    text-align: left;
-    font-size: 36px;
-
-    @media screen and (max-width: 576px) {
-      font-size: 28px;
-    }
-  }
-
-  .cart__header {
-    margin-top: 16px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    background-color: #7342d6;
-    color: white;
-    font-size: 1.1rem;
-    padding: 12px 16px;
-
-    .price {
-      text-align: end;
-    }
-
-    .quantity {
-      text-align: center;
-    }
-  }
-
-  .cart__contents {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .cart__empty {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-top: 48px;
-    padding-bottom: 48px;
-
-    &--message {
-      margin: 48px 0 24px;
-      font-size: 1.25rem;
-    }
-
-    &--img {
-      max-width: 260px;
-      width: 75%;
-      object-fit: contain;
-    }
-
-    &--btn {
-      padding-left: 48px;
-      padding-right: 48px;
-    }
-  }
 
   .mobile {
     display: none;
   }
-
+  
   @media screen and (max-width: 768px) {
     .desktop {
       display: none !important;
     }
-
+  
     .mobile {
       display: block !important;
     }
   }
+}
+
+.cart-header {
+  text-align: left;
+  font-size: 36px;
 
   @media screen and (max-width: 576px) {
-    h2 {
-      font-size: 28px;
-    }
+    font-size: 28px;
   }
+}
+
+.cart-categories {
+  margin-top: 16px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  background-color: #7342d6;
+  color: white;
+  font-size: 1.1rem;
+  padding: 12px 16px;
+
+  &__price {
+    text-align: end;
+  }
+
+  &__quantity {
+    text-align: center;
+  }
+}
+
+.cart-contents {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
