--- a/src/scss/pages/Cart/_cartTotals.scss
+++ b/src/scss/pages/Cart/_cartTotals.scss
@@ -1,21 +1,19 @@
-#cart {
-  .totals {
+.cart-totals {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 32px;
+
+  &__row {
     display: flex;
-    justify-content: flex-end;
-    margin-top: 32px;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
 
-    &__row {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 20px;
-    }
+  &__row.final {
+    font-weight: 900;
+  }
 
-    &__row:nth-child(3) {
-      font-weight: 900;
-    }
-
-    .btn {
-      margin-bottom: 32px;
-    }
+  &__checkout-btn {
+    margin-bottom: 32px;
   }
 }
