create and import util files, but still need to convert them to mixins

--- a/src/css/pages/BrowseBooks/BrowseBooks.css
+++ b/src/css/pages/BrowseBooks/BrowseBooks.css
@@ -1,3 +1,20 @@
+.btn {
+  background-color: #7342d6;
+  padding: 12px 24px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  transition: opacity 250ms ease;
+  font-size: 1rem;
+}
+.btn:hover {
+  opacity: 0.9;
+}
+
+.text--purple {
+  color: #7342d6;
+}
+
 .browse-header {
   padding-top: 20px;
   padding-bottom: 24px;
