--- a/src/css/pages/BookInfo/BookInfo.css
+++ b/src/css/pages/BookInfo/BookInfo.css
@@ -1,3 +1,20 @@
+.btn {
+  background-color: #7342d6;
+  padding: 12px 24px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  transition: opacity 250ms ease;
+  font-size: 1rem;
+}
+.btn:hover {
+  opacity: 0.9;
+}
+
+.text--purple {
+  color: #7342d6;
+}
+
 .view-all {
   padding-bottom: 20px;
 }
