--- a/src/css/pages/Cart/Cart.css
+++ b/src/css/pages/Cart/Cart.css
@@ -1,3 +1,20 @@
+.btn {
+  background-color: #7342d6;
+  padding: 12px 24px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  transition: opacity 250ms ease;
+  font-size: 1rem;
+}
+.btn:hover {
+  opacity: 0.9;
+}
+
+.text--purple {
+  color: #7342d6;
+}
+
 .cart {
   min-height: calc(100vh - 92px - 220px);
 }
