--- a/src/css/pages/BookInfo/BookInfo.css
+++ b/src/css/pages/BookInfo/BookInfo.css
@@ -1,20 +1,3 @@
-.btn {
-  background-color: #7342d6;
-  padding: 12px 24px;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  transition: opacity 250ms ease;
-  font-size: 1rem;
-}
-.btn:hover {
-  opacity: 0.9;
-}
-
-.text--purple {
-  color: #7342d6;
-}
-
 .view-all {
   padding-bottom: 20px;
 }
@@ -59,10 +42,20 @@
   display: none;
 }
 .active-book .cart-btn {
+  background-color: #7342d6;
+  padding: 12px 24px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  transition: opacity 250ms ease;
+  font-size: 1rem;
   transition: background-color 500ms ease;
   transition-delay: 200ms;
   margin-top: 20px;
   position: relative;
+}
+.active-book .cart-btn:hover {
+  opacity: 0.9;
 }
 .active-book .cart-btn::after {
   content: "";
