--- a/src/css/pages/Cart/Cart.css
+++ b/src/css/pages/Cart/Cart.css
@@ -1,20 +1,3 @@
-.btn {
-  background-color: #7342d6;
-  padding: 12px 24px;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  transition: opacity 250ms ease;
-  font-size: 1rem;
-}
-.btn:hover {
-  opacity: 0.9;
-}
-
-.text--purple {
-  color: #7342d6;
-}
-
 .cart {
   min-height: calc(100vh - 92px - 220px);
 }
@@ -98,11 +81,21 @@
   align-items: center;
 }
 .item__adjust-quantity-btn {
+  background-color: #7342d6;
+  padding: 12px 24px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  transition: opacity 250ms ease;
+  font-size: 1rem;
   margin-bottom: 0;
-  border-radius: 50% !important;
+  border-radius: 50%;
   width: 40px;
   height: 40px;
-  padding: 0 !important;
+  padding: 0;
+}
+.item__adjust-quantity-btn:hover {
+  opacity: 0.9;
 }
 .item__current-quantity {
   font-weight: bold;
@@ -168,8 +161,18 @@
   object-fit: contain;
 }
 .cart-empty__btn {
+  background-color: #7342d6;
+  padding: 12px 24px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  transition: opacity 250ms ease;
+  font-size: 1rem;
   padding-left: 48px;
   padding-right: 48px;
+}
+.cart-empty__btn:hover {
+  opacity: 0.9;
 }
 
 .cart-totals {
@@ -186,7 +189,17 @@
   font-weight: 900;
 }
 .cart-totals__checkout-btn {
+  background-color: #7342d6;
+  padding: 12px 24px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  transition: opacity 250ms ease;
+  font-size: 1rem;
   margin-bottom: 32px;
+}
+.cart-totals__checkout-btn:hover {
+  opacity: 0.9;
 }
 
 .confirm-remove {
@@ -211,12 +224,32 @@
   justify-content: space-between;
 }
 .confirm-remove__cancel-btn {
+  background-color: #7342d6;
+  padding: 12px 24px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  transition: opacity 250ms ease;
+  font-size: 1rem;
   font-size: 1rem;
   background-color: gray;
 }
+.confirm-remove__cancel-btn:hover {
+  opacity: 0.9;
+}
 .confirm-remove__remove-btn {
+  background-color: #7342d6;
+  padding: 12px 24px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  transition: opacity 250ms ease;
+  font-size: 1rem;
   font-size: 1rem;
   background-color: #c14953;
+}
+.confirm-remove__remove-btn:hover {
+  opacity: 0.9;
 }
 @media screen and (max-width: 576px) {
   .confirm-remove__header {
