--- a/src/css/pages/Home/Home.css
+++ b/src/css/pages/Home/Home.css
@@ -1,20 +1,3 @@
-.btn {
-  background-color: #7342d6;
-  padding: 12px 24px;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  transition: opacity 250ms ease;
-  font-size: 1rem;
-}
-.btn:hover {
-  opacity: 0.9;
-}
-
-.text--purple {
-  color: #7342d6;
-}
-
 #home main section {
   padding-top: 48px;
   padding-bottom: 48px;
@@ -42,4 +25,137 @@
   #home main section#explore {
     padding-bottom: 60px;
   }
+}
+
+.landing {
+  max-width: 720px;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: calc(100vh - 92px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.landing__header {
+  text-align: center;
+}
+.landing__title {
+  font-size: 48px;
+  color: #7342d6;
+  margin-bottom: 24px;
+}
+.landing__subtitle {
+  font-size: 24px;
+  margin-bottom: 32px;
+}
+.landing__img {
+  margin-top: 32px;
+  max-height: 300px;
+  width: 100%;
+  object-fit: contain;
+}
+.landing__btn {
+  background-color: #7342d6;
+  padding: 12px 24px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  transition: opacity 250ms ease;
+  font-size: 1rem;
+}
+.landing__btn:hover {
+  opacity: 0.9;
+}
+@media screen and (max-width: 768px) {
+  .landing__title {
+    font-size: 40px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .landing__img {
+    height: 35vh;
+  }
+}
+@media screen and (max-width: 480px) {
+  .landing__title {
+    font-size: 36px;
+  }
+  .landing__subtitle {
+    font-size: 20px;
+  }
+}
+
+#highlights .highlights-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-flow: column;
+  column-gap: 20px;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+#highlights .highlights-grid .first-highlight {
+  grid-column: 1/2;
+}
+#highlights .highlight__icon--wrapper {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  border: 2px solid #7342d6;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#highlights .highlight__icon {
+  color: #7342d6;
+  font-size: 32px;
+}
+#highlights .highlight__title {
+  margin-top: 20px;
+  margin-bottom: 12px;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#highlights .highlight__para {
+  max-width: 250px;
+  margin: 0 auto;
+}
+@media screen and (max-width: 480px) {
+  #highlights .highlights {
+    column-gap: 16px;
+  }
+  #highlights .highlight__title {
+    font-size: 18px;
+  }
+  #highlights .highlight__para {
+    font-size: 14px;
+  }
+  #highlights .highlight__icon--wrapper {
+    width: 80px;
+    height: 80px;
+  }
+  #highlights .highlight__icon {
+    font-size: 28px;
+  }
+}
+
+.explore {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.explore__btn {
+  background-color: #7342d6;
+  padding: 12px 24px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  transition: opacity 250ms ease;
+  font-size: 1rem;
+}
+.explore__btn:hover {
+  opacity: 0.9;
 }
