--- a/src/scss/pages/BookInfo/_Active.scss
+++ b/src/scss/pages/BookInfo/_Active.scss
@@ -1,3 +1,5 @@
+@use '../../utils';
+
 .active-book {
   display: flex;
   align-items: flex-start;
@@ -35,6 +37,7 @@
   }
 
   .cart-btn {
+    @include utils.btn;
     transition: background-color 500ms ease;
     transition-delay: 200ms;
     margin-top: 20px;
