--- a/src/scss/pages/Cart/_cartEmpty.scss
+++ b/src/scss/pages/Cart/_cartEmpty.scss
@@ -1,3 +1,5 @@
+@use '../../utils';
+
 .cart-empty {
   flex-grow: 1;
   display: flex;
@@ -19,6 +21,7 @@
   }
 
   &__btn {
+    @include utils.btn;
     padding-left: 48px;
     padding-right: 48px;
   }
