--- a/src/scss/pages/Cart/_cartItem.scss
+++ b/src/scss/pages/Cart/_cartItem.scss
@@ -1,3 +1,5 @@
+@use '../../utils';
+
 .item {
   padding: 24px 0;
   border-bottom: 1px solid gray;
@@ -40,11 +42,12 @@
   }
 
   &__adjust-quantity-btn {
+    @include utils.btn;
     margin-bottom: 0;
-    border-radius: 50% !important;
+    border-radius: 50%;
     width: 40px;
     height: 40px;
-    padding: 0 !important;
+    padding: 0;
   }
 
   &__current-quantity {
