--- a/src/scss/pages/Home/Home.scss
+++ b/src/scss/pages/Home/Home.scss
@@ -1,29 +1,14 @@
 @use '../../utils';
+@use 'Layout';
+@use 'Landing';
+@use 'WhyChooseLibrary';
 
-#home main section {
-  padding-top: 48px;
-  padding-bottom: 48px;
+.explore {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  .section__title {
-    font-size: 2rem;
-    text-align: center;
-    margin-bottom: 40px;
-
-    @media screen and (max-width: 768px) {
-      margin-bottom: 24px;
-    }
-  }
-
-  @media screen and (max-width: 576px) {
-    padding-top: 32px;
-    padding-bottom: 32px;
-  }
-
-  &#explore {
-    padding-bottom: 96px;
-
-    @media screen and (max-width: 576px) {
-      padding-bottom: 60px;
-    }
+  &__btn {
+    @include utils.btn;
   }
 }
