--- a/src/css/pages/BrowseBooks/BrowseBooks.css
+++ b/src/css/pages/BrowseBooks/BrowseBooks.css
@@ -1,14 +1,14 @@
-.browse-header {
+#browse .header {
   padding-top: 20px;
   padding-bottom: 24px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.browse-header__title {
+#browse .header__title {
   font-size: 40px;
 }
-.browse-header__select {
+#browse .header__select {
   background-color: #fff;
   border-radius: 4px;
   border: 1px solid #dcdfe6;
@@ -19,30 +19,29 @@
   padding: 0 16px;
 }
 @media screen and (max-width: 768px) {
-  .browse-header {
+  #browse .header {
     padding-top: 0;
     padding-bottom: 12px;
   }
-  .browse-header__title {
+  #browse .header__title {
     font-size: 2rem;
   }
-  .browse-header__select {
+  #browse .header__select {
     padding: 0 8px;
     line-height: 36px;
     height: 36px;
   }
 }
 @media screen and (max-width: 480px) {
-  .browse-header__title {
+  #browse .header__title {
     font-size: 1.75rem;
   }
 }
-
-.browse-books {
+#browse .books {
   padding-bottom: 64px;
 }
 @media screen and (max-width: 768px) {
-  .browse-books {
+  #browse .books {
     padding-top: 8px;
     padding-bottom: 40px;
   }
