--- a/src/scss/pages/BookInfo/BookInfo.scss
+++ b/src/scss/pages/BookInfo/BookInfo.scss
@@ -1,4 +1,44 @@
 @use '../../utils';
-@use 'Header';
 @use 'Active';
-@use 'Recommended';
+
+.view-all {
+  padding-bottom: 20px;
+
+  &__link-wrapper {
+    display: flex;
+    align-items: center;
+  }
+
+  &__link {
+    font-size: 1.5rem;
+
+    &:first-child {
+      margin-right: 12px;
+    }
+  }
+}
+
+.recommended {
+  padding-top: 48px;
+  padding-bottom: 60px;
+
+  &__header {
+    margin-bottom: 32px;
+    font-size: 2rem;
+    text-align: center;
+  }
+
+  @media screen and (max-width: 576px) {
+    padding-top: 24px;
+    
+    &__header {
+      margin-bottom: 24px;
+    }
+  }
+
+  @media screen and (max-width: 480px) {
+    &__header {
+      margin-bottom: 20px;
+    }
+  }
+}
