--- a/src/scss/pages/BrowseBooks/BrowseBooks.scss
+++ b/src/scss/pages/BrowseBooks/BrowseBooks.scss
@@ -1,54 +1,56 @@
 @use '../../utils';
 
-.browse-header {
-  padding-top: 20px;
-  padding-bottom: 24px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  &__title {
-    font-size: 40px;
-  }
-
-  &__select {
-    background-color: #fff;
-    border-radius: 4px;
-    border: 1px solid #dcdfe6;
-    color: #606266;
-    height: 40px;
-    line-height: 40px;
-    outline: none;
-    padding: 0 16px;
-  }
-
-  @media screen and (max-width: 768px) {
-    padding-top: 0;
-    padding-bottom: 12px;
+#browse {
+  .header {
+    padding-top: 20px;
+    padding-bottom: 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     &__title {
-      font-size: 2rem;
+      font-size: 40px;
     }
 
     &__select {
-      padding: 0 8px;
-      line-height: 36px;
-      height: 36px;
+      background-color: #fff;
+      border-radius: 4px;
+      border: 1px solid #dcdfe6;
+      color: #606266;
+      height: 40px;
+      line-height: 40px;
+      outline: none;
+      padding: 0 16px;
+    }
+
+    @media screen and (max-width: 768px) {
+      padding-top: 0;
+      padding-bottom: 12px;
+
+      &__title {
+        font-size: 2rem;
+      }
+
+      &__select {
+        padding: 0 8px;
+        line-height: 36px;
+        height: 36px;
+      }
+    }
+
+    @media screen and (max-width: 480px) {
+      &__title {
+        font-size: 1.75rem;
+      }
     }
   }
 
-  @media screen and (max-width: 480px) {
-    &__title {
-      font-size: 1.75rem;
+  .books {
+    padding-bottom: 64px;
+
+    @media screen and (max-width: 768px) {
+      padding-top: 8px;
+      padding-bottom: 40px;
     }
-  }
-}
-
-.browse-books {
-  padding-bottom: 64px;
-
-  @media screen and (max-width: 768px) {
-    padding-top: 8px;
-    padding-bottom: 40px;
   }
 }
