--- a/src/scss/pages/Cart/_cartLayout.scss
+++ b/src/scss/pages/Cart/_cartLayout.scss
@@ -1,7 +1,39 @@
 @use '../../variables';
 
-.cart {
+#cart {
   min-height: calc(100vh - variables.$nav-height - variables.$footer-height);
+
+  .header {
+    text-align: left;
+    font-size: 36px;
+  
+    @media screen and (max-width: 576px) {
+      font-size: 28px;
+    }
+  }
+
+  .categories {
+    margin-top: 16px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    background-color: #7342d6;
+    color: white;
+    font-size: 1.1rem;
+    padding: 12px 16px;
+  
+    &__price {
+      text-align: end;
+    }
+  
+    &__quantity {
+      text-align: center;
+    }
+  }
+  
+  .contents {
+    display: flex;
+    flex-direction: column;
+  }
 
   .mobile {
     display: none;
@@ -16,37 +48,4 @@
       display: block !important;
     }
   }
-}
-
-.cart-header {
-  text-align: left;
-  font-size: 36px;
-
-  @media screen and (max-width: 576px) {
-    font-size: 28px;
-  }
-}
-
-.cart-categories {
-  margin-top: 16px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  background-color: #7342d6;
-  color: white;
-  font-size: 1.1rem;
-  padding: 12px 16px;
-
-  &__price {
-    text-align: end;
-  }
-
-  &__quantity {
-    text-align: center;
-  }
-}
-
-.cart-contents {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
 }
