--- a/src/css/pages/Home/Home.css
+++ b/src/css/pages/Home/Home.css
@@ -98,7 +98,7 @@
   grid-column: 1/2;
 }
 
-.highlight__icon--wrapper {
+.highlight__icon-wrapper {
   width: 100px;
   height: 100px;
   margin: 0 auto;
