--- a/src/css/components/Book.css
+++ b/src/css/components/Book.css
@@ -1,4 +1,4 @@
-.book__img--wrapper,
+.book__img-wrapper,
 .book-skeleton__img {
   height: 280px;
 }
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
 }
-.book__cover-img {
+.book__img {
   display: block;
   height: 100%;
   width: 100%;
@@ -15,7 +15,7 @@
   object-position: left bottom;
   transition: transform 300ms ease;
 }
-.book__cover-img:hover {
+.book__img:hover {
   transform: scale(1.03);
 }
 .book__info {
@@ -69,7 +69,7 @@
 
 */
 @media screen and (max-width: 1200px) {
-  .book__img--wrapper,
+  .book__img-wrapper,
   .book-skeleton__img {
     height: 25vw;
   }
@@ -80,11 +80,11 @@
   }
 }
 @media screen and (max-width: 576px) {
-  .book__img--wrapper,
+  .book__img-wrapper,
   .book-skeleton__img {
     height: 55vw;
   }
-  .book__cover-img {
+  .book__img {
     object-position: center bottom;
   }
   .book__info {
