--- a/src/css/components/Nav.css
+++ b/src/css/components/Nav.css
@@ -1,40 +1,40 @@
-nav .container {
+.nav {
   height: 92px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   max-width: 1200px;
 }
-nav .logo {
+.nav__logo {
   width: 160px;
   margin-left: -20px;
 }
-nav ul {
+.nav__links {
   display: flex;
   align-items: center;
   list-style-type: none;
 }
-nav ul li {
+.nav__link-wrapper {
   margin-left: 24px;
   font-size: 1.25rem;
   font-weight: bold;
 }
-nav a {
+.nav__link {
   padding: 8px;
 }
-nav a.primary {
+.nav__link--primary {
   border: 2px solid #7342d6;
   color: #7342d6;
   border-radius: 4px;
 }
-nav .shopping-cart {
+.nav__cart-icon {
   position: relative;
 }
-nav .shopping-cart .fa-cart-shopping {
+.nav__cart-icon .fa-cart-shopping {
   font-size: 20px;
   color: #7342d6;
 }
-nav .shopping-cart .cart-size-bubble {
+.nav__cart-icon .cart-size-bubble {
   background-color: red;
   color: white;
   width: 18px;
@@ -48,76 +48,22 @@ nav .shopping-cart .cart-size-bubble {
   bottom: 10px;
   right: -4px;
 }
-nav .hamburger {
+.nav__hamburger-icon {
   display: none;
+}
+.nav__hamburger-icon button {
   border: none;
   background-color: transparent;
 }
-nav .hamburger .fa-bars {
+.nav__hamburger-icon .fa-bars {
   font-size: 1.5rem;
   color: #7342d6;
 }
-
-.modal-backdrop:has(.nav-modal) {
-  justify-content: flex-end;
-  padding: 0;
-}
-
-.nav-modal {
-  background-color: #7342d6;
-  border-radius: 0;
-  padding: 40px;
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-.nav-modal ul {
-  height: 100%;
-  max-height: 260px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  list-style-type: none;
-  color: #fff;
-}
-.nav-modal .fa-x-wrapper {
-  position: absolute;
-  right: 40px;
-  top: 40px;
-  margin: 0;
-}
-.nav-modal .fa-x-wrapper .fa-x {
-  color: #fff;
-  font-size: 1.75rem;
-}
-.nav-modal a {
-  font-size: 1.5rem;
-  display: flex;
-  align-items: center;
-  border-radius: 4px;
-  border: 1px solid #fff;
-  padding: 12px;
-}
-.nav-modal .link-icon {
-  font-size: 1.2rem;
-  margin-right: 12px;
-}
-
-.fade-in .nav-modal {
-  transform: translateX(100%);
-  transition: transform 300ms ease-in-out;
-}
-.fade-in.visible .nav-modal {
-  transform: translateX(0);
-  transition: transform 300ms ease-in-out;
-}
-
 @media (max-width: 760px) {
-  nav li {
+  .nav__link-wrapper {
     display: none;
   }
-  nav .hamburger,
-  nav .shopping-cart {
+  .nav__hamburger-icon, .nav__cart-icon {
     display: block;
   }
 }
@@ -127,14 +73,14 @@ nav .hamburger .fa-bars {
   }
 }
 @media screen and (max-height: 480px) {
-  .nav-modal {
+  .nav {
     padding-top: 24px;
     padding-bottom: 24px;
   }
-  .nav-modal ul {
+  .nav__links {
     max-height: none;
   }
-  .nav-modal .fa-x-wrapper {
+  .nav__x-icon {
     position: relative;
     right: 0;
     top: 0;
