--- a/src/css/pages/Home/Home.css
+++ b/src/css/pages/Home/Home.css
@@ -125,6 +125,15 @@
   margin: 0 auto;
 }
 
+@media screen and (max-width: 576px) {
+  .highlight__icon-wrapper {
+    width: 80px;
+    height: 80px;
+  }
+  .highlight__icon {
+    font-size: 24px;
+  }
+}
 @media screen and (max-width: 480px) {
   .highlights {
     column-gap: 16px;
@@ -134,13 +143,6 @@
   }
   .highlight__para {
     font-size: 14px;
-  }
-  .highlight__icon--wrapper {
-    width: 80px;
-    height: 80px;
-  }
-  .highlight__icon {
-    font-size: 28px;
   }
 }
 .explore {
