shrink size of section title on home page

--- a/src/css/pages/Home/Home.css
+++ b/src/css/pages/Home/Home.css
@@ -1,28 +1,25 @@
-#home main section {
+section {
   padding-top: 48px;
   padding-bottom: 48px;
 }
-#home main section .section__title {
+section .section__title {
   font-size: 2rem;
   text-align: center;
   margin-bottom: 40px;
 }
-@media screen and (max-width: 768px) {
-  #home main section .section__title {
-    margin-bottom: 24px;
-  }
-}
-@media screen and (max-width: 576px) {
-  #home main section {
-    padding-top: 32px;
-    padding-bottom: 32px;
-  }
-}
-#home main section#explore {
+section#explore {
   padding-bottom: 96px;
 }
 @media screen and (max-width: 576px) {
-  #home main section#explore {
+  section {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  section .section__title {
+    font-size: 1.75rem;
+    margin-bottom: 24px;
+  }
+  section#explore {
     padding-bottom: 60px;
   }
 }
