--- a/src/scss/pages/Home/_Layout.scss
+++ b/src/scss/pages/Home/_Layout.scss
@@ -1,4 +1,4 @@
-#home main section {
+section {
   padding-top: 48px;
   padding-bottom: 48px;
 
@@ -6,21 +6,22 @@
     font-size: 2rem;
     text-align: center;
     margin-bottom: 40px;
-
-    @media screen and (max-width: 768px) {
-      margin-bottom: 24px;
-    }
+  }
+  
+  &#explore {
+    padding-bottom: 96px;
   }
 
   @media screen and (max-width: 576px) {
     padding-top: 32px;
     padding-bottom: 32px;
-  }
-  
-  &#explore {
-    padding-bottom: 96px;
 
-    @media screen and (max-width: 576px) {
+    .section__title {
+      font-size: 1.75rem;
+      margin-bottom: 24px;
+    }
+
+    &#explore {
       padding-bottom: 60px;
     }
   }
